--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "class-transformer",
-  "version": "0.5.1a",
+  "version": "0.5.1",
   "description": "Proper decorator-based transformation / serialization / deserialization of plain javascript objects to class constructors",
   "author": "TypeStack contributors",
   "license": "MIT",
@@ -35,6 +35,7 @@
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts src/",
     "lint:check": "eslint --max-warnings 0 --ext .ts src/",
     "test": "jest --coverage --verbose",
+    "test5": "jest --verbose test/functional/typescript5.test.ts",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand --no-cache --coverage --verbose"
   },
@@ -54,23 +55,21 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.5",
     "@rollup/plugin-node-resolve": "^15.2.2",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^20.8.5",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^26.8.7",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "lint-staged": "^14.0.1",
+    "@eslint/js": "9.10.0",
+    "@types/jest": "29.5.12",
+    "@types/node": "22.5.4",
+    "@types/eslint__js": "8.42.3",
+    "eslint": "9.10.0",
+    "eslint-plugin-jest": "28.8.3",
+    "jest": "29.7.0",
     "prettier": "^2.8.8",
-    "reflect-metadata": "0.1.13",
+    "reflect-metadata": "0.2.1",
     "rimraf": "5.0.5",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.6.0"
   }
 }
