--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "build": "npm run build:cjs",
     "build:clean": "rimraf build",
+    "build:esNext": "tsc --project tsconfig.prod.esNext.json",
     "build:es2015": "tsc --project tsconfig.prod.esm2015.json",
     "build:esm5": "tsc --project tsconfig.prod.esm5.json",
     "build:cjs": "tsc --project tsconfig.prod.cjs.json",
