--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "outDir": "./build",
-  "include": ["./**/*.ts", "./**/*.js"],
-  "exclude": ["build", "node_modules", "sample", "**/*.spec.ts", "test/**"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./build",
+    "outDir": "./build/node",
     "baseUrl": ".",
     "target": "ESNext",
     "lib": ["ESNext"],
@@ -13,6 +10,12 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "esModuleInterop": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "strict": true,
+    "inlineSources": true,
+    "removeComments": false,
+    "forceConsistentCasingInFileNames": true
+  },
+  "exclude": ["build", "node_modules", "sample", "**/*.spec.ts", "test/**"]
 }
