--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,9 +3,8 @@
   "compilerOptions": {
     "strict": false,
     "strictPropertyInitialization": false,
-    "sourceMap": false,
     "removeComments": true,
-    "noImplicitAny": false,
+    "noImplicitAny": false
   },
   "exclude": ["node_modules"]
 }
