--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts src/",
     "lint:check": "eslint --max-warnings 0 --ext .ts src/",
     "test": "jest --coverage --verbose",
-    "test5": "jest --verbose ",
-    "test5:watch": "jest --watch test/functional/typescript5.test.ts",
     "test:watch": "jest --watch",
+    "test:unit": "jest --verbose ",
     "test:ci": "jest --runInBand --no-cache --coverage --verbose"
   },
   "husky": {
