--- a/package.json
+++ b/package.json
@@ -54,25 +54,25 @@
     ]
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "husky": "^4.3.8",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
+    "@rollup/plugin-commonjs": "28.0.0",
+    "@rollup/plugin-node-resolve": "15.3.0",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.7.4",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
+    "eslint": "9.11.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "28.8.3",
+    "husky": "9.1.6",
+    "jest": "29.7.0",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
     "reflect-metadata": "0.2.2",
     "rimraf": "6.0.1",
-    "rollup": "^2.79.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "rollup": "4.23.0",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2",
+    "@rollup/plugin-terser": "0.4.4"
   }
 }
