--- a/.github/workflows/release-private-package.yml
+++ b/.github/workflows/release-private-package.yml
@@ -9,18 +9,8 @@ on:
         default: 'got it!'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci
-      - run: npm test
-
-  publish-gpr:
-    needs: build
+  publish:
+    name: Publish to GitHub
     runs-on: ubuntu-latest
     permissions:
       packages: write
