--- a/.github/workflows/release-private-package.yml
+++ b/.github/workflows/release-private-package.yml
@@ -9,18 +9,8 @@ on:
         default: 'got it!'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci
-      - run: npm test
-
-  publish-gpr:
-    needs: build
+  publish:
+    name: Publish to GitHub
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -31,7 +21,18 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+      - run: npm ci --ignore-scripts
+      - run: npm run prettier:check
+      - run: npm run lint:check
+      - run: npm run test:ci
+      - run: npm run build:es2015
+      - run: npm run build:esm5
+      - run: npm run build:cjs
+      - run: npm run build:umd
+      - run: npm run build:types
+      - run: cp LICENSE build/LICENSE
+      - run: cp README.md build/README.md
+      - run: jq 'del(.devDependencies) | del(.scripts)' package.json > build/package.json
+      - run: npm publish ./build
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
