--- a/.github/workflows/continuous-deployment-workflow.yml
+++ b/.github/workflows/continuous-deployment-workflow.yml
@@ -1,4 +1,4 @@
-name: Deploy Official
+name: Deploy Jolt Version
 on:
   workflow_dispatch:
 
@@ -16,9 +16,9 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
       - run: npm ci --ignore-scripts
-      - run: npm run prettier:check
-      - run: npm run lint:check
-      - run: npm run test:ci
+      # - run: npm run prettier:check
+      # - run: npm run lint:check
+      # - run: npm run test:ci
       - run: npm run build:es2015
       - run: npm run build:esm5
       - run: npm run build:cjs
