--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "28.0.0",
     "@rollup/plugin-node-resolve": "15.3.0",
+    "@rollup/plugin-terser": "0.4.4",
     "@types/jest": "29.5.13",
     "@types/node": "22.7.4",
     "@typescript-eslint/eslint-plugin": "8.8.0",
@@ -75,7 +76,6 @@
     "rollup": "4.23.0",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.6.2",
-    "@rollup/plugin-terser": "0.4.4"
+    "typescript": "5.6.2"
   }
 }
