--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prettier:fix": "prettier --write \"**/*.{ts,md}\"",
     "prettier:check": "prettier --check \"**/*.{ts,md}\"",
     "lint:fix": "eslint --max-warnings 0 --fix --ext .ts src/",
-    "lint:check": "eslint --max-warnings 0 --ext .ts src/",
+    "lint:check": "eslint --max-warnings 0",
     "test": "jest --coverage --verbose",
     "test:watch": "jest --watch",
     "test:unit": "jest --verbose ",
@@ -57,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
     "@rollup/plugin-commonjs": "28.0.0",
     "@rollup/plugin-node-resolve": "15.3.0",
     "@rollup/plugin-terser": "0.4.4",
